# learn-axum

./: .env.example  Cargo.toml  Readme.md
src/: lib.rs  main.rs
src/routes/: always_error.rs  custom_json_extractor.rs  get_json.rs  hello_world.rs  middleware_data.rs  mirror_custom_headers.rs  mirror_headers.rs  mirror_hello.rs  mirror_json.rs  mod.rs  path_variables.rs  query_params.rs  return_201.rs  set_middleware_custom_header.rs  validate_with_serde.rs
src/utils/: database.rs
